overflow fixed

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -31,18 +31,13 @@
     width: 100%;
     height: 40px;
 
-    img {
-      width: 14.483px;
-      height: 14.483px;
-    }
-
+  
     .input-container {
       input {
         padding: 2px 14px;
         border-radius: 10px;
         border: 1px solid $lightGrey;
         box-shadow: 0px 0px 3px 0px $lightGrey;
-        width: 298px;
         height: 34px;
 
         &::placeholder {
@@ -62,16 +57,14 @@
       }
 
       img {
-        position: absolute;
-        right: 14px;
-        top: 24px;
+  
         width: 20.098px;
         height: 20.267px;
       }
     }
   }
   .search-bar-products {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
