--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -71,7 +71,7 @@
 
     .third-section-image-and-circle-wrapper {
       position: relative;
-      width: 465.676px;
+      width: 100%;
       height: 257.756px;
       display: flex;
 
